smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-object3.smithy
// Parse error at line 5, column 1 near `[EOF]`: Expected: ':', but found '[EOF]'
namespace com.foo
@foo(bar:
string MyString
